--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.html">khone <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">khone ma <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about.html"> About us </a>
@@ -119,7 +119,7 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
+                        Amir <br />
                         Center
                       </h1>
                       <hr />
